# GameEngine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  build.sh  run.sh  todo.md
cmake/: AssetManagement.cmake
src/: CMakeLists.txt  Engine.cpp  Engine.hpp  NOTES.md  SceneCache.cpp  SceneCache.hpp  Version.hpp  main.cpp
src/Core/: JsonDataLoader.cpp  JsonDataLoader.hpp  JsonDataLoader.inl  JsonFile.cpp  JsonFile.hpp  JsonGraphics.cpp  JsonGraphics.hpp  JsonMath.cpp  JsonMath.hpp
src/Math/: HashMath.hpp  IndexRange2.cpp  Transform.cpp  Transform.hpp  Util.cpp  Util.hpp
src/Renderer/: Asset.hpp  CPUMesh.hpp  Camera.cpp  Camera.h  Camera.hpp  Color.cpp  Common.hpp  GPUMesh.hpp  GameRendere.cpp  GameRendere.hpp  GameRenderer.cpp  GameRenderer.hpp  GfxDevice.cpp  GfxDevice.h  GfxDevice.hpp  GfxTypes.h  ImageCache.cpp  ImageCache.hpp  ImageLoader.cpp  ImageLoader.hpp  Light.hpp  Material.hpp  MaterialCache.cpp  MaterialCache.hpp  MeshCache.cpp  MeshCache.hpp  MipMapGeneration.cpp  MipMapGeneration.hpp  NBuffer.cpp  NBuffer.hpp  Renderer.cpp  Renderer.h  RendererUtils.cpp  RendererUtils.h  Scene.cpp  Scene.hpp  SkeletalAnimation.cpp  SkeletalAnimationCache.cpp  SkeletalAnimationCache.hpp  Skeleton.hpp  (+2 more)
src/Renderer/Vulkan/: AppendableBuffer.hpp  BindlessSetManager.cpp  BindlessSetManager.hpp  Descriptors.cpp  Descriptors.hpp  GPUBuffer.hpp  GPUImage.hpp  Init.cpp  Init.hpp  Pipelines.cpp  Pipelines.hpp  Shaders.cpp  Shaders.hpp  Swapchain.cpp  Swapchain.hpp  Util.cpp  Util.hpp  VulkanImmediateExecutor.cpp  VulkanImmediateExecutor.hpp
src/Renderer/niagara/: README.md  device.cpp  extern.cpp  scene.cpp  scene.h  scenert.cpp  swapchain.cpp  swapchain.h  textures.cpp  textures.h
src/Renderer/shaders/: drawcull.comp.glsl  mesh.h
src/Utils/: GltfLoader.cpp  GltfLoader.hpp  thread_name.hpp
src/assets/robot_toon/: robot-toon.gltf
src/shaders/: mesh.h
